test/k8sT/manifests/l4-policy-demo.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
description: "L7 policy for allowing all traffic via proxy in demo DS"
metadata:
  name: "l7-policy-demo"
spec:
  endpointSelector:
    matchLabels:
      zgroup: testDS
  ingress:
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
    - ports:
      # we allow tftp traffic to bypass the proxy
      - port: "69"
        protocol: UDP
